<resources>
    <string name="app_name">COURTAINS</string>
    <string name="text_Username">Username</string>
    <string name="text_Password">Password</string>
    <string name="text_Login">Login</string>
    <string name="text_Exit">Exit</string>
    <string name="hint_username">email@example.com</string>
    <string name="hint_password">Your password here</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_error">ERROR</string>
    <string name="text_error_message">Invalid User or Password</string>
    <string name="text_action_search">Search</string>
    <string name="text_action_settings">Settings</string>
    <string name="text_action_logout">Logout</string>
</resources>